# SPDX-License-Identifier: LGPL-2.1-only
# Copyright © 2019 National Instruments. All Rights Reserved.

AM_CPPFLAGS = -I. -I$(top_srcdir)/src
LDADD = $(top_builddir)/src/librtpi.la -lpthread

if ENABLE_CANCELLATION

check_PROGRAMS = tst-cond1 tst-cond2 tst-cond3 tst-cond4 tst-cond5 tst-cond6 tst-cond7 tst-cond8 tst-cond9 tst-cond10 tst-cond11 tst-cond12 tst-cond13 tst-cond16 tst-cond18 tst-cond19 tst-cond20 tst-cond21 tst-cond22 tst-cond24 tst-cond25 tst-cond-except
TESTS = tst-cond1 tst-cond2 tst-cond3 tst-cond4 tst-cond5 tst-cond6 tst-cond7 tst-cond8 tst-cond9 tst-cond10 tst-cond11 tst-cond12 tst-cond13 tst-cond16 tst-cond18 tst-cond19 tst-cond20 tst-cond21 tst-cond22 tst-cond24 tst-cond25 tst-cond-except

else

check_PROGRAMS = tst-cond1 tst-cond2 tst-cond3 tst-cond4 tst-cond5 tst-cond6 tst-cond9 tst-cond10 tst-cond11 tst-cond12 tst-cond13 tst-cond16 tst-cond18 tst-cond19 tst-cond20 tst-cond21 tst-cond24
TESTS = tst-cond1 tst-cond2 tst-cond3 tst-cond4 tst-cond5 tst-cond6 tst-cond9 tst-cond10 tst-cond11 tst-cond12 tst-cond13 tst-cond16 tst-cond18 tst-cond19 tst-cond20 tst-cond21 tst-cond24

endif

test: check
